# meeting-minutes-generator

./: .gitignore  MoM_generator.ipynb  README.md  meeting_transcript.txt  pyproject.toml
