[project]
name = "book-summary"
version = "0.1.0"
description = "Read book and summarize it"
authors = [
    {name = "Shahid Riaz Bhatti",email = "shahid.bhatti@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama (>=0.5.3,<0.6.0)",
    "pymupdf (>=1.26.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.5"
ipykernel = "^6.30.1"

